# RemoteSensing-InterdisciplinaryProject

./: .gitattributes  .gitignore  .gitmodules  README.md
dynamic-flood-visualization/: README.md  pyproject.toml
dynamic-flood-visualization/src/: color_schemes.py
dynamic-flood-visualization/src/dcloader/: __init__.py  loader.py
dynamic-flood-visualization/src/mapvisualieser/: init.py  mapvisualiser.py
dynamic-flood-visualization/src/mapvisualiser/: __init__.py  mapvisualiser.py
dynamic-flood-visualization/src/preprocessing/: __init__.py  preprocessing.py
dynamic-flood-visualization/test/: test.ipynb
dynamic-flood-visualization/tracking/: Time_tracking.md
dynamic-flood-visualization/visualizations/adam/: visualisation_pakistan_analysis.ipynb  visualisation_pakistan_new_technques.ipynb
dynamic-flood-visualization/visualizations/jakob/: GEO_map.ipynb  testing.ipynb
dynamic-flood-visualization/visualizations/jonas/: Flood_visualization.ipynb  convert_jpg.ipynb  pyvista.ipynb  swath_mosaic.ipynb  test.ipynb  visualisation_germany_analysis_v2.ipynb
